crates/reinhardt-urls/crates/routers-macros/tests/ui/invalid_character_special.stderr
error: Invalid character '@' at position 7
       URL paths may only contain:
       - Alphanumeric characters (a-z, A-Z, 0-9)
       - Hyphens (-)
       - Underscores (_)
       - Slashes (/)
       - Curly braces for parameters ({, })
 --> tests/ui/invalid_character_special.rs:5:20
  |
5 |     let _path = path!("/users/@admin/");
  |                       ^^^^^^^^^^^^^^^^
